# myARIAtestApp

./: CMakeLists.txt  README.md  version_prefix.txt
CMakeModules/: UtilsMacros.cmake  script_init_cmake.cmake
apps/: CMakeLists.txt  README.md
apps/GUI/: CMakeLists.txt  main_GUI.ui  resources.qrc  resources.rc  styleSheet.qss
apps/GUI/include/: AgentClient.h  Q_DebugStream.h  main_GUI.h
apps/GUI/src/: AgentClient.cpp  main.cpp  main_GUI.cpp
